[package]
name = "bench"
version = "0.1.0"
authors = ["Rémi Blaise <pro@remi-blaise.com>"]
edition = "2018"

[dependencies]
rand = "0.7.3"
simple-matrix = "0.1"
num = "0.2.1"
rust-crypto = "0.2.36"
nix = "0.17.0"
shared_memory = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.51"
bincode = "1.2.1"
quick-xml = { version = "0.18.1", features = [ "serialize" ] }

[[bin]]
name = "hello-world-1"
path = "bench/hello-world/1.rs"

[[bin]]
name = "memory-1"
path = "bench/memory/1.rs"

[[bin]]
name = "memory-2"
path = "bench/memory/2.rs"

[[bin]]
name = "memory-3"
path = "bench/memory/3.rs"

[[bin]]
name = "iteration-recursion-1"
path = "bench/iteration-recursion/1.rs"

[[bin]]
name = "iteration-recursion-2"
path = "bench/iteration-recursion/2.rs"

[[bin]]
name = "iteration-recursion-3"
path = "bench/iteration-recursion/3.rs"

[[bin]]
name = "iteration-recursion-4"
path = "bench/iteration-recursion/4.rs"

[[bin]]
name = "data-structures-vector-1"
path = "bench/data-structures-vector/1.rs"

[[bin]]
name = "data-structures-vector-2"
path = "bench/data-structures-vector/2.rs"

[[bin]]
name = "data-structures-vector-3"
path = "bench/data-structures-vector/3.rs"

[[bin]]
name = "data-structures-vector-4"
path = "bench/data-structures-vector/4.rs"

[[bin]]
name = "data-structures-vector-5"
path = "bench/data-structures-vector/5.rs"

[[bin]]
name = "data-structures-vector-6"
path = "bench/data-structures-vector/6.rs"

[[bin]]
name = "data-structures-bst-1"
path = "bench/data-structures-bst/1.rs"

[[bin]]
name = "data-structures-bst-2"
path = "bench/data-structures-bst/2.rs"

[[bin]]
name = "matrix-1"
path = "bench/matrix/1.rs"

[[bin]]
name = "matrix-2"
path = "bench/matrix/2.rs"

[[bin]]
name = "string-1"
path = "bench/string/1.rs"

[[bin]]
name = "complex-1"
path = "bench/complex/1.rs"

[[bin]]
name = "complex-2"
path = "bench/complex/2.rs"

[[bin]]
name = "datacomplexvector-3"
path = "bench/complex/3.rs"

[[bin]]
name = "datacomplexvector-4"
path = "bench/complex/4.rs"

[[bin]]
name = "complex-5"
path = "bench/complex/5.rs"

[[bin]]
name = "hashing-1"
path = "bench/hashing/1.rs"

[[bin]]
name = "hashing-2"
path = "bench/hashing/2.rs"

[[bin]]
name = "hashing-3"
path = "bench/hashing/3.rs"

[[bin]]
name = "concurrency-1"
path = "bench/concurrency/1.rs"

[[bin]]
name = "concurrency-2"
path = "bench/concurrency/2.rs"

[[bin]]
name = "concurrency-3"
path = "bench/concurrency/3.rs"

[[bin]]
name = "sockets-1"
path = "bench/sockets/1.rs"

[[bin]]
name = "sockets-2"
path = "bench/sockets/2.rs"

[[bin]]
name = "timers-1"
path = "bench/timers/1.rs"

[[bin]]
name = "serialization-1"
path = "bench/serialization/1.rs"

[[bin]]
name = "serialization-2"
path = "bench/serialization/2.rs"

[[bin]]
name = "serialization-3"
path = "bench/serialization/3.rs"

[[bin]]
name = "serialization-4"
path = "bench/serialization/4.rs"
